# finance-graph

./: AGENTS.md  Cargo.toml  README.md
data/: data.duckdb.wal  stocks.csv  stocks_extended.csv
src/: main.rs
static/: app.js  index.html  plugins.js  styles.css
